<resources>
    <string name="app_name">Task1</string>
    <string name="welcome_back">Welcome back</string>
    <string name="please_login_your_infomation">Please login your infomation</string>
    <string name="please_register_your_infomation">Please Register your infomation</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="i_do_not_have_account">I do not have account</string>
    <string name="new_registration">New registration</string>
        <string name="register">Register</string>
        <string name="name">Name</string>
        <string name="email">Email</string>
        <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="number_phone">Number Phone</string>
    <string name="enter_your_number_phone">Enter Your Number Phone</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="budget">Budget</string>
    <string name="statistical">Statistical</string>
    <string name="settings">Settings</string>
    <string name="add_category">Add Category</string>
    <string-array name="categories">
        <item>Food</item>
        <item>Transport</item>
        <item>Utilities</item>
        <item>Entertainment</item>
    </string-array>

</resources>